trunk/Archive2/f5/73256c91b017fe/output
main.cpp:2:9: error: #include expects "FILENAME" or <FILENAME>
 #include
         ^
main.cpp:3:1: error: expected unqualified-id before numeric constant
 1
 ^
In file included from /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/include/x86intrin.h:27:0,
                 from /usr/local/include/c++/4.9.0/x86_64-unknown-linux-gnu/bits/opt_random.h:33,
                 from /usr/local/include/c++/4.9.0/random:50,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:29:
/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.0/include/ia32intrin.h:53:25: error: expected declaration before end of line
 #pragma GCC push_options
                         ^
